// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HealthPieChart should render correctly for many connectionFailures 1`] = `
<DocumentFragment>
  <div
    style="height: 200px; width: 200px;"
  >
    <div
      class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
    >
      <div
        style="text-align: center;"
      >
        <div
          class="styledComponents__Wrapper-sc-c4vpsp-0 eBLcPR"
        >
          <div
            class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
          >
            <label
              class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
            >
              <span
                class="ant-radio-button ant-radio-button-checked"
              >
                <input
                  checked=""
                  class="ant-radio-button-input"
                  type="radio"
                  value="nodes"
                />
                <span
                  class="ant-radio-button-inner"
                />
              </span>
              <span>
                Venues
              </span>
            </label>
            <label
              class="ant-radio-button-wrapper"
            >
              <span
                class="ant-radio-button"
              >
                <input
                  class="ant-radio-button-input"
                  type="radio"
                  value="wlans"
                />
                <span
                  class="ant-radio-button-inner"
                />
              </span>
              <span>
                WLANs
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="sc-jSMfEi jUxSCY"
      >
        <div
          class="styledComponents__Wrapper-sc-13w5wfx-4 edzPbE"
          type="no-border"
        >
          <div
            class="ant-card"
          >
            <div
              class="ant-card-head"
            >
              <div
                class="ant-card-head-wrapper"
              >
                <div
                  class="ant-card-head-title"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="styledComponents__Title-sc-13w5wfx-5 hYNJuf"
                      >
                        auth Top 5 Impacted Venues
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-extra"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  />
                </div>
              </div>
            </div>
            <div
              class="ant-card-body"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="1"
                      style="height: 800px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M918.8361 260.0198L927.7731 255.5333L932.7731 255.5333"
                              fill="none"
                              stroke="#66B1E8"
                            />
                            <path
                              d="M611.8254 710.7253L610.9223 720.6844L605.9223 720.6844"
                              fill="none"
                              stroke="#EC7100"
                            />
                            <path
                              d="M331.7916 351.5071L321.9131 349.9528L316.9131 349.9528"
                              fill="none"
                              stroke="#F9C34B"
                            />
                            <path
                              d="M470.4162 138.112L464.9809 129.7181L459.9809 129.7181"
                              fill="none"
                              stroke="#61C46E"
                            />
                            <path
                              d="M585.6724 92.7664L583.9311 82.9191L578.9311 82.9191"
                              fill="none"
                              stroke="#F095FF"
                            />
                            <path
                              d="M640 88A312 312 0 0 1 890.202 586.3946L838.8785 548.1598A248 248 0 0 0 640 152Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M890.202 586.3946A312 312 0 0 1 360.352 538.3511L417.7157 509.9714A248 248 0 0 0 838.8785 548.1598Z"
                              fill="#EC7100"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M360.352 538.3511A312 312 0 0 1 416.3472 182.4606L462.2247 227.084A248 248 0 0 0 417.7157 509.9714Z"
                              fill="#F9C34B"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M416.3472 182.4606A312 312 0 0 1 533.0047 106.9198L554.9524 167.0388A248 248 0 0 0 462.2247 227.084Z"
                              fill="#61C46E"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M533.0047 106.9198A312 312 0 0 1 640 88L640 152A248 248 0 0 0 554.9524 167.0388Z"
                              fill="#F095FF"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-7.5 -5l15 0l0 34l-15 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 388)"
                            />
                            <path
                              d="M0 0l0 0l0 0l0 0Z"
                              fill="none"
                              transform="translate(640 388)"
                            />
                            <path
                              d="M-2.5 4l5 0l0 20l-5 0Z"
                              fill="none"
                              transform="translate(640 388)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:16px;font-family:'Montserrat', sans-serif;font-weight:600;"
                              text-anchor="middle"
                              transform="translate(640 388)"
                              y="14"
                            >
                              1.08K
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    ,
  </div>
</DocumentFragment>
`;

exports[`HealthPieChart should render correctly for missing nodes data 1`] = `
<DocumentFragment>
  <div
    style="height: 200px; width: 200px;"
  >
    <div
      class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
    >
      <div
        style="text-align: center;"
      >
        <div
          class="styledComponents__Wrapper-sc-c4vpsp-0 eBLcPR"
        >
          <div
            class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
          >
            <label
              class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
            >
              <span
                class="ant-radio-button ant-radio-button-checked"
              >
                <input
                  checked=""
                  class="ant-radio-button-input"
                  type="radio"
                  value="wlans"
                />
                <span
                  class="ant-radio-button-inner"
                />
              </span>
              <span>
                WLAN
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="sc-jSMfEi jUxSCY"
      >
        <div
          class="styledComponents__Wrapper-sc-13w5wfx-4 edzPbE"
          type="no-border"
        >
          <div
            class="ant-card"
          >
            <div
              class="ant-card-head"
            >
              <div
                class="ant-card-head-wrapper"
              >
                <div
                  class="ant-card-head-title"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="styledComponents__Title-sc-13w5wfx-5 hYNJuf"
                      >
                        auth Top 1 Impacted WLAN
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-extra"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  />
                </div>
              </div>
            </div>
            <div
              class="ant-card-body"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="3"
                      style="height: 800px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 712L640 722L645 722"
                              fill="none"
                              stroke="#66B1E8"
                            />
                            <path
                              d="M640 88A312 312 0 1 1 639.9688 88M640 152A248 248 0 1 0 640.0248 152Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-7.5 -5l15 0l0 34l-15 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 388)"
                            />
                            <path
                              d="M0 0l0 0l0 0l0 0Z"
                              fill="none"
                              transform="translate(640 388)"
                            />
                            <path
                              d="M-2.5 4l5 0l0 20l-5 0Z"
                              fill="none"
                              transform="translate(640 388)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:16px;font-family:'Montserrat', sans-serif;font-weight:600;"
                              text-anchor="middle"
                              transform="translate(640 388)"
                              xml:space="preserve"
                              y="14"
                            >
                              1.3 s
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    ,
  </div>
</DocumentFragment>
`;

exports[`HealthPieChart should render correctly for single ttc failures 1`] = `
<DocumentFragment>
  <div
    style="height: 200px; width: 200px;"
  >
    <div
      class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
    >
      <div
        style="text-align: center;"
      >
        <div
          class="styledComponents__Wrapper-sc-c4vpsp-0 eBLcPR"
        >
          <div
            class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
          >
            <label
              class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
            >
              <span
                class="ant-radio-button ant-radio-button-checked"
              >
                <input
                  checked=""
                  class="ant-radio-button-input"
                  type="radio"
                  value="wlans"
                />
                <span
                  class="ant-radio-button-inner"
                />
              </span>
              <span>
                WLAN
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="sc-jSMfEi jUxSCY"
      >
        <div
          class="styledComponents__Wrapper-sc-13w5wfx-4 edzPbE"
          type="no-border"
        >
          <div
            class="ant-card"
          >
            <div
              class="ant-card-head"
            >
              <div
                class="ant-card-head-wrapper"
              >
                <div
                  class="ant-card-head-title"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="styledComponents__Title-sc-13w5wfx-5 hYNJuf"
                      >
                        auth Top 1 Impacted WLAN
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-extra"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  />
                </div>
              </div>
            </div>
            <div
              class="ant-card-body"
            >
              <div
                style="overflow: visible; height: 0px; width: 0px;"
              >
                <div
                  class="ant-space ant-space-vertical"
                >
                  <div
                    class="ant-space-item"
                  >
                    <div
                      _echarts_instance_="ec_mock"
                      class="echarts-for-react "
                      size-sensor-id="2"
                      style="height: 800px; width: 1280px; position: relative;"
                    >
                      <div
                        style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                      >
                        <svg
                          baseProfile="full"
                          height="800"
                          style="position:absolute;left:0;top:0;user-select:none"
                          version="1.1"
                          width="1280"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink"
                        >
                          <rect
                            fill="none"
                            fill-opacity="1"
                            height="800"
                            id="0"
                            width="1280"
                            x="0"
                            y="0"
                          />
                          <g>
                            <path
                              d="M640 712L640 722L645 722"
                              fill="none"
                              stroke="#66B1E8"
                            />
                            <path
                              d="M640 88A312 312 0 1 1 639.9688 88M640 152A248 248 0 1 0 640.0248 152Z"
                              fill="#66B1E8"
                              stroke="#FFFFFF"
                              stroke-linejoin="round"
                            />
                            <path
                              d="M-7.5 -5l15 0l0 34l-15 0Z"
                              fill="rgb(0,0,0)"
                              fill-opacity="0"
                              stroke="#ccc"
                              stroke-width="0"
                              transform="translate(640 388)"
                            />
                            <path
                              d="M0 0l0 0l0 0l0 0Z"
                              fill="none"
                              transform="translate(640 388)"
                            />
                            <path
                              d="M-2.5 4l5 0l0 20l-5 0Z"
                              fill="none"
                              transform="translate(640 388)"
                            />
                            <text
                              dominant-baseline="central"
                              fill="#333333"
                              style="font-size:16px;font-family:'Montserrat', sans-serif;font-weight:600;"
                              text-anchor="middle"
                              transform="translate(640 388)"
                              xml:space="preserve"
                              y="14"
                            >
                              1.3 s
                            </text>
                          </g>
                        </svg>
                      </div>
                      <div
                        class=""
                      />
                      <object
                        class="size-sensor-object"
                        data="about:blank"
                        style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                        tabindex="-1"
                        type="text/html"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="resize-triggers"
              >
                <div
                  class="expand-trigger"
                >
                  <div
                    style="width: 1281px; height: 801px;"
                  />
                </div>
                <div
                  class="contract-trigger"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    ,
  </div>
</DocumentFragment>
`;
